--- a/passwordmanager/src/main/resources/templates/homepage.html
+++ b/passwordmanager/src/main/resources/templates/homepage.html
@@ -8,7 +8,7 @@
 <body>
 <div class="page-container">
     <div class="container">
-        <h2>Welcome, User!</span></h2>
+        <h2>Welcome, <span th:text="${username}">User</span>!</h2>
         <h3>Your Password Entries</h3>
         <table class="homepage-table">
             <thead>
@@ -27,6 +27,9 @@
             </tbody>
         </table>
         <a href="/add-password">Add New Password</a>
+        <form action="/logout" method="post">
+            <button type="submit">Logout</button>
+        </form>
     </div>
 </div>
 </body>
