--- a/passwordmanager/src/main/resources/templates/homepage.html
+++ b/passwordmanager/src/main/resources/templates/homepage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external stylesheet -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="page-container">
@@ -19,10 +19,9 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="entry : ${passwordEntries}">
-                <td th:text="${entry.serviceName}"></td>
+            <tr th:each="entry : ${accounts}">
+                <td th:text="${entry.URL}"></td>
                 <td th:text="${entry.username}"></td>
-                <td><a th:href="@{/view-password/{id}(id=${entry.id})}">View</a></td>
             </tr>
             </tbody>
         </table>
