--- a/passwordmanager/src/main/resources/templates/login.html
+++ b/passwordmanager/src/main/resources/templates/login.html
@@ -8,14 +8,13 @@
 <body>
 <div class="page-container">
     <div class="container">
-        <h2>Login</h2>
+        <h2>Welcome to Password Manager V2.0!</h2>
         <form action="/login" method="post">
-            <label>
-                <input type="text" name="username" placeholder="Username" required>
-            </label>
-            <label>
-                <input type="password" name="password" placeholder="Password" required>
-            </label>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" placeholder="Username" required />
+
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" placeholder="Password" required />
             <button type="submit">Login</button>
         </form>
         <a href="/register">Don't have an account? Register here!</a>
