--- a/passwordmanager/src/main/resources/templates/register.html
+++ b/passwordmanager/src/main/resources/templates/register.html
@@ -10,9 +10,8 @@
 <div class="page-container">
     <div class="container">
         <h2>Register New Account</h2>
-
+        <p><strong>Password must meet the following requirements:</strong></p>
         <div class="note">
-            <p><strong>Password must meet the following requirements:</strong></p>
             <ul>
                 <li>At least 8 characters</li>
                 <li>At least one number</li>
@@ -21,17 +20,17 @@
             </ul>
         </div>
 
-        <p>Enter the following fields to register your account</p>
+        <p><strong>Enter the following fields to register your account:</strong></p>
 
         <form action="/register" method="post">
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required />
+            <input type="text" id="username" name="username" placeholder="Username" required />
 
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required />
+            <input type="password" id="password" name="password" placeholder="Password" required />
 
             <label for="confirmPassword">Verify Password:</label>
-            <input type="password" id="confirmPassword" name="confirmPassword" required />
+            <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Re-type Password" required />
 
             <div class="button-group">
                 <button type="submit">Register</button>
