--- a/passwordmanager/src/main/resources/templates/delete-account.html
+++ b/passwordmanager/src/main/resources/templates/delete-account.html
@@ -13,7 +13,7 @@
 
     <form th:action="@{/delete-account}" method="post">
       <button type="submit" class="delete-button">Delete Account</button>
-      <button type="button" onclick="window.location.href='/home'">Cancel</button>
+      <button type="button" onclick="window.location.href='/home'">Go back to Homepage</button>
     </form>
   </div>
 </div>
