--- a/passwordmanager/src/main/resources/templates/add-password.html
+++ b/passwordmanager/src/main/resources/templates/add-password.html
@@ -25,7 +25,7 @@
 
         <div class="button-group">
           <button type="submit">Add password</button>
-          <button type="button" onclick="window.location.href='/home'">Cancel</button>
+          <button type="button" class="cancel-button" onclick="window.location.href='homepage.html'">Cancel</button>
         </div>
       </form>
     </form>
