--- a/passwordmanager/src/main/resources/templates/generate-password.html
+++ b/passwordmanager/src/main/resources/templates/generate-password.html
@@ -31,7 +31,7 @@
             </div>
             <div class="button-group">
                 <button type="submit">Generate</button>
-                <button type="button" onclick="window.location.href='/home'">Cancel</button>
+                <button type="button" class="cancel-button" onclick="window.location.href='/home'">Cancel</button>
             </div>
         </form>
     </div>
