--- a/passwordmanager/src/main/resources/templates/register.html
+++ b/passwordmanager/src/main/resources/templates/register.html
@@ -34,7 +34,7 @@
 
             <div class="button-group">
                 <button type="submit">Register</button>
-                <button type="button" onclick="window.location.href='login.html'">Cancel</button>
+                <button type="button" class="cancel-button" onclick="window.location.href='login.html'">Cancel</button>
             </div>
         </form>
     </div>
