--- a/passwordmanager/src/main/resources/static/styles.css
+++ b/passwordmanager/src/main/resources/static/styles.css
@@ -22,6 +22,7 @@ h3 {
     color: #333;
     font-size: 24px;
     margin-bottom: 10px;
+    text-align: center;
 }
 
 p {
@@ -176,6 +177,7 @@ button + button {
     color: white;
     border: none;
     padding: 21px 25px;
+    margin-bottom: 26px;
 }
 
 .delete-button:hover {
@@ -187,6 +189,7 @@ button + button {
     color: white;
     border: none;
     padding: 10px 15px;
+    margin-bottom: 26px;
 }
 
 .toggle-password:hover {
@@ -198,4 +201,23 @@ button + button {
     color: white;
     border: none;
     margin-left: 20px;
+}
+
+.info-icon {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    background-color: #ffffff;
+    border: 1px solid #ddd;
+    border-radius: 50%;
+    padding: 10px;
+    font-size: 20px;
+    color: #333;
+    box-shadow: 2px 5px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+.info-icon:hover {
+    background-color: #007bff;
+    color: white;
 }
