Small issue fixed with cancel button (again)

--- a/passwordmanager/src/main/resources/static/styles.css
+++ b/passwordmanager/src/main/resources/static/styles.css
@@ -203,6 +203,10 @@ button + button {
     margin-left: 20px;
 }
 
+.cancel-button:hover{
+    background-color: darkred;
+}
+
 .info-icon {
     position: absolute;
     top: 20px;
