Minor syntax corrections

--- a/passwordmanager/src/main/resources/templates/homepage.html
+++ b/passwordmanager/src/main/resources/templates/homepage.html
@@ -54,16 +54,16 @@
         <p style="margin-bottom: 2px;"><strong>Options:</strong></p>
 
         <form action="/add-password">
-            <button type"submit"> Add New Password</button>
+            <button type="submit"> Add New Password</button>
         </form>
         <form action="/generate-password">
-            <button type"submit"> Generate New Password</button>
+            <button type="submit"> Generate New Password</button>
         </form>
         <form action="/change-password">
-            <button type"submit"> Change Main Password</button>
+            <button type="submit"> Change Main Password</button>
         </form>
         <form action="/delete-account">
-            <button type"submit" class="delete-account-button"> Delete My Account</button>
+            <button type="submit" class="delete-account-button"> Delete My Account</button>
         </form>
         <form action="/logout" method="post">
             <button type="submit" class="logout-button">Logout</button>
