Finished the about page

--- a/passwordmanager/src/main/resources/templates/about.html
+++ b/passwordmanager/src/main/resources/templates/about.html
@@ -8,9 +8,15 @@
 <body>
 <div class="page-container">
   <div class="container">
-    <h1>About the Password Manager</h1>
-    <p>This app allows you to securely store and manage your passwords for various websites.</p>
-    <a href="/home">Back to Homepage</a>
+    <h1 style="text-align: center">About the Password Manager</h1>
+    <p>A simple password that allows you to securely store and manage your passwords for various websites.</p>
+    <p>Please look at the README.md for instructions on how to use this program! </p>
+    <p><strong>Author: </strong> Miguel Fuentes</p>
+    <p><strong>Version: </strong> V2.0</p>
+    <p><strong>Email: </strong> mafuentes250@gmail.com</p>
+    <form>
+      <button type="button" onclick="window.location.href='/home'">Back to Homepage</button>
+    </form>
   </div>
 </div>
 </body>
