--- a/passwordmanager/src/main/resources/templates/register.html
+++ b/passwordmanager/src/main/resources/templates/register.html
@@ -26,18 +26,24 @@
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" placeholder="Username" required />
 
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" placeholder="Password" required />
+            <label style="margin-top: 28px" for="password">Password:</label>
+            <input type="password" id="password" name="password" placeholder="Password" required oninput="checkPasswordStrength()" />
+
+            <div id="passwordStrength" class="indicator"></div>
 
             <label for="confirmPassword">Verify Password:</label>
-            <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Re-type Password" required />
+            <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Re-type Password" required oninput="validatePassword()"/>
+
+            <div id="validatePassword" class="indicator"></div>
 
             <div class="button-group">
-                <button type="submit">Register</button>
+                <button id="registerButton" type="submit">Register</button>
                 <button type="button" class="cancel-button" onclick="window.location.href='login.html'">Cancel</button>
             </div>
         </form>
     </div>
 </div>
+
+<script src="passwordValidator.js" defer></script>
 </body>
 </html>
