--- a/passwordmanager/src/main/resources/static/styles.css
+++ b/passwordmanager/src/main/resources/static/styles.css
@@ -258,3 +258,16 @@ hr.rounded {
     width: 100%;
     display: block;
 }
+
+.failure-message{
+    color: red;
+    text-align: center;
+    font-weight: bold;
+}
+
+.success-message {
+    color: green;
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
+}
