Forgot to add error message in the html

--- a/passwordmanager/src/main/resources/templates/change-password.html
+++ b/passwordmanager/src/main/resources/templates/change-password.html
@@ -10,6 +10,8 @@
   <div class="container">
     <h2>Change Password</h2>
 
+    <div style="margin-bottom: 20px" th:if="${status == 'error'}" class="failure-message" th:text="${message}"></div>
+
     <form th:action="@{/change-password}" method="post">
       <label for="oldPassword">Old Password:</label>
       <input type="password" id="oldPassword" name="oldPassword" placeholder="Old Password" required />
