--- a/passwordmanager/src/main/resources/templates/change-password.html
+++ b/passwordmanager/src/main/resources/templates/change-password.html
@@ -14,19 +14,27 @@
 
     <form th:action="@{/change-password}" method="post">
       <label for="oldPassword">Old Password:</label>
-      <input type="password" id="oldPassword" name="oldPassword" placeholder="Old Password" required />
+      <input type="password" id="oldPassword" name="oldPassword" placeholder="Old Password" required oninput="checkPasswordsSame()"/>
+
+      <div id="checkPasswordIndicator" class="indicator"></div>
 
       <label for="newPassword">New Password:</label>
-      <input type="password" id="newPassword" name="newPassword" placeholder="New Password" required />
+      <input type="password" id="newPassword" name="newPassword" placeholder="New Password" required oninput="checkNewPasswordStrength()"/>
+
+      <div id="passwordStrength" class="indicator"></div>
 
       <label for="confirmPassword">Confirm New Password:</label>
-      <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Re-type New Password" required />
+      <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Re-type New Password" required oninput="validateNewPassword()"/>
+
+      <div id="validatePassword" class="indicator"></div>
+
       <div class="button-group">
-        <button type="submit">Change Password</button>
+        <button type="submit" id="changeButton">Change Password</button>
         <button type="button" class="cancel-button" onclick="window.location.href='/home'">Cancel</button>
       </div>
     </form>
   </div>
 </div>
+<script src="changePasswordValidator.js" defer></script>
 </body>
 </html>
