--- a/passwordmanager/src/main/resources/templates/about.html
+++ b/passwordmanager/src/main/resources/templates/about.html
@@ -9,7 +9,7 @@
 <div class="page-container">
   <div class="container">
     <h1 style="text-align: center">About the Password Manager</h1>
-    <p>A simple password that allows you to securely store and manage your passwords for various websites.</p>
+    <p>A simple password manager that allows you to securely store and manage your passwords for various websites!</p>
     <p>Please look at the README.md for instructions on how to use this program! </p>
     <p><strong>Author: </strong> Miguel Fuentes</p>
     <p><strong>Version: </strong> V2.0</p>
