Various wording and visual changes

--- a/passwordmanager/src/main/resources/templates/delete-account.html
+++ b/passwordmanager/src/main/resources/templates/delete-account.html
@@ -9,7 +9,7 @@
 <div class="page-container">
   <div class="container">
     <h2>Are you sure you want to permanently delete your account?</h2>
-    <p><strong>Note: All passwords saved in this account will also be deleted! This action cannot be undone!</strong></p>
+    <p style="color: #333"><strong>Note: All passwords saved in this account will also be deleted! This action cannot be undone!</strong></p>
 
     <form th:action="@{/delete-account}" method="post">
       <button type="submit" class="delete-button">Delete Account</button>
