--- a/passwordmanager/src/main/resources/templates/view-password.html
+++ b/passwordmanager/src/main/resources/templates/view-password.html
@@ -8,10 +8,10 @@
 <body>
 <div class="page-container">
   <div class="container">
-    <h2>Password for <span th:text="${entry.URL}">Website</span></h2>
+    <h2>Password for: <span th:text="${entry.URL}">Website</span></h2>
     <h3>Note: Ensure to update this data if your username/password has changed!</h3>
-    <p><strong>Username: <span th:text="${entry.username}"></span></strong></p>
-    <p><strong>Password: <span th:text="${entry.password}"></span></strong></p>
+    <p style="color: #333"><strong>Username: <span th:text="${entry.username}"></span></strong></p>
+    <p style="color: #333"><strong>Password: <span th:text="${entry.password}"></span></strong></p>
 
     <button type="button" class="button-group" onclick="window.location.href='/home'">Go back to Homepage</button>
   </div>
