--- a/passwordmanager/src/main/resources/templates/add-password.html
+++ b/passwordmanager/src/main/resources/templates/add-password.html
@@ -11,17 +11,17 @@
     <h2>Add New Password</h2>
     <form action="/save-password" method="post">
       <form>
-        <label for="URL">URL:</label>
-        <input type="text" id="URL" name="URL" placeholder="URL" required />
+        <label for="URL">URL or Website Name:</label>
+        <input type="text" id="URL" name="URL" placeholder="Enter URL or Website Name" required />
 
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" placeholder="Username" required />
+        <input type="text" id="username" name="username" placeholder="Enter Username" required />
 
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" placeholder="Password" required />
+        <input type="password" id="password" name="password" placeholder="Enter Password" required />
 
         <label for="confirmPassword">Retype Password:</label>
-        <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Retype Password" required />
+        <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Re-type Password" required />
 
         <div class="button-group">
           <button type="submit">Add password</button>
