--- a/passwordmanager/src/main/resources/templates/change-password.html
+++ b/passwordmanager/src/main/resources/templates/change-password.html
@@ -14,12 +14,12 @@
 
     <form th:action="@{/change-password}" method="post">
       <label for="oldPassword">Old Password:</label>
-      <input type="password" id="oldPassword" name="oldPassword" placeholder="Old Password" required oninput="checkPasswordsSame()"/>
+      <input type="password" id="oldPassword" name="oldPassword" placeholder="Enter Old Password" required oninput="checkPasswordsSame()"/>
 
       <div id="checkPasswordIndicator" class="indicator"></div>
 
       <label for="newPassword">New Password:</label>
-      <input type="password" id="newPassword" name="newPassword" placeholder="New Password" required oninput="checkNewPasswordStrength()"/>
+      <input type="password" id="newPassword" name="newPassword" placeholder="Enter New Password" required oninput="checkNewPasswordStrength()"/>
 
       <div id="passwordStrength" class="indicator"></div>
 
