--- a/passwordmanager/src/main/resources/templates/generate-password.html
+++ b/passwordmanager/src/main/resources/templates/generate-password.html
@@ -13,8 +13,8 @@
         <h2>Generate a New Password</h2>
 
         <form method="POST" action="/generate-new-password">
-            <label for="website">Website Name:</label>
-            <input type="text" id="URL" name="URL" placeholder="Enter website name" required>
+            <label for="website">URL or Website Name:</label>
+            <input type="text" id="URL" name="URL" placeholder="Enter URL or Website Name" required>
 
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" placeholder="Enter your username" required>
