--- a/passwordmanager/src/main/resources/templates/login.html
+++ b/passwordmanager/src/main/resources/templates/login.html
@@ -17,10 +17,10 @@
         
         <form action="/login" method="post">
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" placeholder="Username" required />
+            <input type="text" id="username" name="username" placeholder="Enter Username" required />
 
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" placeholder="Password" required />
+            <input type="password" id="password" name="password" placeholder="Enter Password" required />
             <button type="submit">Login</button>
         </form>
         <a href="/register">Don't have an account? Register here!</a>
