--- a/passwordmanager/src/main/resources/templates/register.html
+++ b/passwordmanager/src/main/resources/templates/register.html
@@ -27,10 +27,10 @@
 
         <form action="/register" method="post">
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" placeholder="Username" required />
+            <input type="text" id="username" name="username" placeholder="Enter Username" required />
 
             <label style="margin-top: 28px" for="password">Password:</label>
-            <input type="password" id="password" name="password" placeholder="Password" required oninput="checkPasswordStrength()" />
+            <input type="password" id="password" name="password" placeholder="Enter Password" required oninput="checkPasswordStrength()" />
 
             <div id="passwordStrength" class="indicator"></div>
 
