Fixed issue with passwords showing up for the same user for different logged in users

--- a/passwordmanager/src/main/resources/templates/register.html
+++ b/passwordmanager/src/main/resources/templates/register.html
@@ -41,7 +41,7 @@
 
             <div class="button-group">
                 <button id="registerButton" type="submit">Register</button>
-                <button type="button" class="cancel-button" onclick="window.location.href='login.html'">Cancel</button>
+                <button type="button" class="cancel-button" onclick="window.location.href='/login'">Cancel</button>
             </div>
         </form>
     </div>
