Fixed issue with URL/website name duplication for the SAME user

--- a/passwordmanager/src/main/resources/templates/add-password.html
+++ b/passwordmanager/src/main/resources/templates/add-password.html
@@ -9,6 +9,9 @@
 <div class="page-container">
   <div class="container add-password-container">
     <h2>Add New Password</h2>
+
+     <div style="margin-bottom: 20px" th:if="${status == 'error'}" class="failure-message" th:text="${message}"></div>
+    
     <form action="/save-password" method="post">
       <form>
         <label for="URL">URL or Website Name:</label>
