--- a/passwordmanager/src/main/resources/templates/generate-password.html
+++ b/passwordmanager/src/main/resources/templates/generate-password.html
@@ -12,6 +12,8 @@
     <div class="container">
         <h2>Generate a New Password</h2>
 
+        <div style="margin-bottom: 20px" th:if="${status == 'error'}" class="failure-message" th:text="${message}"></div>
+
         <form method="POST" action="/generate-new-password">
             <label for="website">URL or Website Name:</label>
             <input type="text" id="URL" name="URL" placeholder="Enter URL or Website Name" required>
