--- a/passwordmanager/src/main/resources/templates/add-password.html
+++ b/passwordmanager/src/main/resources/templates/add-password.html
@@ -24,15 +24,18 @@
         <input type="password" id="password" name="password" placeholder="Enter Password" required />
 
         <label for="confirmPassword">Retype Password:</label>
-        <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Re-type Password" required />
+        <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Re-type Password" required oninput="validateAddPassword()"/>
+
+        <div id="validatePassword" class="indicator"></div>
 
         <div class="button-group">
-          <button type="submit">Add password</button>
+          <button id="addPasswordButton" type="submit">Add password</button>
           <button type="button" class="cancel-button" onclick="window.location.href='/home'">Cancel</button>
         </div>
       </form>
     </form>
   </div>
 </div>
+<script src="addPasswordValidator.js" defer></script>
 </body>
 </html>
