--- a/passwordmanager/src/main/resources/templates/generate-password.html
+++ b/passwordmanager/src/main/resources/templates/generate-password.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
         <div style="margin-bottom: 20px" th:if="${status == 'error'}" class="failure-message" th:text="${message}"></div>
 
         <form method="POST" action="/generate-new-password">
-            <label for="website">URL or Website Name:</label>
+            <label for="URL">URL or Website Name:</label>
             <input type="text" id="URL" name="URL" placeholder="Enter URL or Website Name" required>
 
             <label for="username">Username:</label>
